fixed issue of overflow-x

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -406,7 +406,7 @@
 }
  @media only screen and (max-width: 991px) {
      .single-item-area-wrapper {
-         margin-bottom: 30px;
+         /* margin-bottom: 30px; */
     }
      .section-title h1 {
          font-size: 24px;
